// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test \`Card\` component custom styles 1`] = `
.c0 {
  box-shadow: none;
  border: solid 1px;
  border-color: #f0f0f0;
  background: white;
  padding: 16px;
  border-radius: 5px;
}

<div
  className="c0"
/>
`;

exports[`test \`Card\` component default styles 1`] = `
.c0 {
  background: white;
  padding: 16px;
  border-radius: 5px;
  box-shadow: 0 3px 32px 0 rgba(10,31,68,0.1),0 0 1px 0 rgba(10,31,68,0.08);
}

<div
  className="c0"
/>
`;
